; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_pop_scope.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_utils.c_pop_scope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hlsl_parse_ctx = type { %struct.hlsl_scope* }
%struct.hlsl_scope = type { %struct.hlsl_scope* }

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Popping current scope\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pop_scope(%struct.hlsl_parse_ctx* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hlsl_parse_ctx*, align 8
  %4 = alloca %struct.hlsl_scope*, align 8
  store %struct.hlsl_parse_ctx* %0, %struct.hlsl_parse_ctx** %3, align 8
  %5 = load %struct.hlsl_parse_ctx*, %struct.hlsl_parse_ctx** %3, align 8
  %6 = getelementptr inbounds %struct.hlsl_parse_ctx, %struct.hlsl_parse_ctx* %5, i32 0, i32 0
  %7 = load %struct.hlsl_scope*, %struct.hlsl_scope** %6, align 8
  %8 = getelementptr inbounds %struct.hlsl_scope, %struct.hlsl_scope* %7, i32 0, i32 0
  %9 = load %struct.hlsl_scope*, %struct.hlsl_scope** %8, align 8
  store %struct.hlsl_scope* %9, %struct.hlsl_scope** %4, align 8
  %10 = load %struct.hlsl_scope*, %struct.hlsl_scope** %4, align 8
  %11 = icmp ne %struct.hlsl_scope* %10, null
  br i1 %11, label %14, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @FALSE, align 4
  store i32 %13, i32* %2, align 4
  br label %20

14:                                               ; preds = %1
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.hlsl_scope*, %struct.hlsl_scope** %4, align 8
  %17 = load %struct.hlsl_parse_ctx*, %struct.hlsl_parse_ctx** %3, align 8
  %18 = getelementptr inbounds %struct.hlsl_parse_ctx, %struct.hlsl_parse_ctx* %17, i32 0, i32 0
  store %struct.hlsl_scope* %16, %struct.hlsl_scope** %18, align 8
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %14, %12
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @TRACE(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
